# VulKanEngine

./: .gitignore  CMakeLists.txt  application.hpp  base.h  camera.hpp  main.cpp  model.hpp  readme.md  test.cpp  uniformManager.hpp
VulkanWrapper/: CMakeLists.txt  Instance.hpp  buffer.hpp  commandBuffer.hpp  commandPool.hpp  description.h  descriptorPool.hpp  descriptorSet.hpp  descriptorSetLayout.hpp  device.hpp  fence.hpp  image.hpp  pipeline.hpp  renderPass.hpp  sampler.hpp  semaphore.hpp  shader.hpp  subPass.hpp  swapChain.hpp  window.hpp  windowSurface.hpp
docc/: commandBuffer.md  gpu读取image时做了哪些事.md  pipeline.md  render.md  关于CmdBeginRenderPass的思考.md  关于memoryBarrier同步机制的理解.md  关于renderPass和subpass的思考.md  关于vkQueueSubmit和vkQueuePresentKHR的思考.md
shaders/: compile.bat  frag.frag  vertice.vert  vs.spv
texture/: texture.hpp
